--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,14 @@ footer{
 footer:not(:first-child){
   border-top: 1px solid rgba(255 , 255 , 255 , 0.1);
 }
+footer .input-group-text{
+  background-color: var(--color-232f3e) ;
+  color: white;
+  padding: 8px 17px;
+  /* font-weight: 400;
+  line-height: 20px;
+  font-size: 14px; */
+}
 
 
 
