--- a/src/App.css
+++ b/src/App.css
@@ -343,6 +343,14 @@ footer .input-group-text{
 
 /* Special product Part Ends Here*/
 
+/* Famous card*/
+.famous-card .famous-content{
+  top:10%;
+  left:10%;
+}
+
+/* Famous card Ends Here*/
+
 
 
 
