--- a/src/App.css
+++ b/src/App.css
@@ -363,6 +363,8 @@ footer .input-group-text{
   font-size: 24px;
   font-weight: 500;
   line-height: 38px;
+  
+
   /* color: white; */
 
 }
@@ -376,15 +378,305 @@ footer .input-group-text{
 /* Famous card Ends Here*/
 
 
+.filter-card {
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px 15px 25px;
+  }
+  .filter-title {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--color-1clclb);
+  }
+  .filter-card ul,
+  .filter-card .form-check-label {
+    list-style-type: none;
+    font-size: 13px;
+    line-height: 30px;
+    color: var(--color-777777);
+    cursor: pointer;
+    }
+    .filter-card .form-check-input:checked {
+      background-color: var(--color-febd69);
+      border-color: var(--color-febd69);
+      }
+    .sub-title {
+    font-size: 14px;
+    font-weight: 600;
+    color: var( --color-lclclb);
+    margin-bottom: 15px;
+    margin-top: 20px;
+    }
+    .colors {
+      list-style-type: none;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      }
+      .colors li {
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+      }
+      .random-products h5 {
+        font-size: 14px;
+        margin-bottom: 8px;
+        }
+      .random-products: first-child {
+        border-bottom: 1px solid var(--color -ebeded);
+        }
+        .filter-sort-grid{
+          padding:10px;
+          background-color: white;
+          border-radius: 10px;
+        }
+        .grid img{
+          width:22px;
+          height:22px;
+          background-color: var(--color -ebeded);
+          padding:8px;
+          border-radius: 3px;
+          cursor: pointer;
+        }
+        
+            .gr-12 {
+            
+            width: 100%;}
+            .gr-6 {
+            
+            width: 49%;}
+            .gr-4 {
+            width: 32%;
+            }
+            .gr-3 {
+            
+            width: 24%;}
+            .gr-12 .product-card {
+            display: flex;
+            gap: 20px;
+            } 
+            .gr-6.product-image{
+              width:100%
+            }
+            .gr-6.product-image img{
+              margin:auto;
+              display:block;
+            }
+            
+            .gr-12 .product-card .product-image {
+            
+            width: 270px;}
+            .gr-12 .action-bar {
+            top: 13%;
+            }
+            .contact-inner-wrapper {
+              padding: 30px 20px;
+              border-radius: 15px;
+              background-color: white;
+              gap: 15px;
+              }
+              .contact-inner-wrapper > div {
+              width: 48%;
+              }
+              .contact-title {
+              font-size: 26px;
+              font-weight: 500;
+              line-height: 35px;
+              text-align: left;
+              }
+               .wishlist-card .cross{
+                top: 15px;
+                right:15px;
+                width: 25px;
+                padding:3px;
+                cursor:pointer;
+              }
+              
+                .wishlist-card h5.title {
+                font-size: 15px;
+                line-height: 22px;
+                font-weight: 500;
+                color: var(--color-lclclb);
+                } 
 
+                 .wishlist-card h6.price {
+                font-size: 15px;
+                line-height: 22px;
+                font-weight: 400;
+                } 
+                .auth-card {
+                  padding: 20px;
+                  background-color: white;
+                  width: 500px;
+                  margin: 30px auto;
+                  border-radius: 10px;
+                  }
+                  .auth-card h3 {
+                  font-size: 19px;
+                  font-weight: 500;
+                  color: var(--color-777777);
+                  }
+                  .auth-card p {
+                    font-size: 13px;
+                    
+                    color: var(--color-777777);
+                    }
+                  .auth-card .form-control {
+                  height: 50px;
+                  background-color: var(--color-f5f5f7);
+                  color: var(--color-777777);
+                  font-size: 14px;
+                  border-radius: 10px;
+                  border-color: transparent;}
+                  .auth-card a {
+                  font-size: 14px;
+                  font-weight: 400;
+                  color: var(--color-1c1c1b);
+                  }
+                  .signup {
+                  background-color: var(--color-febd69);
+                  color: var(--color-131921);
+                  border: none;
+                  }
+                  .signup:hover {
+                    background-color: var(--color-131921);
+                    color: white;
+                    }
+                    .description-wrapper h4,
+                        .reviews-wrapper h3 {
+                        font-size: 26px;
+                        color: #1c1c1b;
+                        margin-bottom: 10px;
+                        }
+                        .description-wrapper p {
+                        font-size: 14px;
+                        color: var(--color-777777);
+                        }
 
-
-
-
-
-
-
-
-
-/* Home page Ends*/
-
+                    .review-inner-wraaper {
+                      background-color: white;
+                      padding: 30px;
+                      }
+                      .review-head {
+                      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                      padding-bottom: 20px;
+                      }
+                      .review-head h4 {
+                      font-size: 18px;
+                      color: var(--color-lclclb);
+                      }
+                      .review-head p,
+                      .review-head a {
+                      font-size: 14px;
+                      color: var(--color-777777);
+                      }
+                      .review-form h4 {
+                        font-size: 16px;
+                        color: var(--color-777777);
+                        }
+                        .review-form{
+                          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                        }
+                        .review:not(:last-child){
+                          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                        }
+                        .review-head p {
+                          font-size: 14px;
+                          color: var(--color-777777);
+                          }
+                          .main-product-image {
+                            padding: 20px;
+                            background-color: white;
+                            border-radius: 10px;
+                            }
+                            .main-product-image > div {
+                            border: 1px solid rgba(0, 0, 0, 0.1)
+                            }
+                            .main-product-image img {
+                            width: 100% ! important;
+                            height: 500px !important;
+                            object-fit: cover;
+                            }
+                            .other-product-images {
+                              padding: 20px;
+                              background-color: white;
+                              
+                              }
+                              .other-product-images > div {
+                                padding: 20px;
+                                width: 48%;
+                                border: 1px solid rgba(0, 0, 0, 0.1)
+                                }
+                                .main-product-image .js-image-zoom__zoomed-image{
+                                  left:230px !important;
+                                  padding: 10px;
+                                  background-color: white;
+                                  border-radius: 10px;
+                                }
+                                .border-bottom {
+                                  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+                                  }
+                                  .main-product-details h3.title {
+                                  font-size: 18px;
+                                  font-weight: 600;
+                                  color: var(--color-lclclb);
+                                  margin-bottom: 10px;
+                                  }
+                                  .main-product-details p.price {
+                                  font-size: 16px;
+                                  line-height: 20px;
+                                  font-weight: 600;
+                                  margin-bottom: 10px;
+                                  }
+                                  .main-product-details a.review-btn,
+                                  .t-review {
+                                  color: var(--color-777777);
+                                  font-size: 13px;
+                                  }
+                                  .product-heading{
+                                    font-size: 14px;
+                                  
+                                  color: var(--color-lclclb);
+                                  margin-bottom: 0px;
+                                  }
+                                  .product-data{
+                                    font-size: 13px;
+                                    columns:var(--color-lclclb);
+                                    margin-bottom:0px;
+                                  }
+                                  .main-product-details a {
+                                    font-size: 13px;
+                                  color: var(--color-777777);
+                                  
+                                  }
+                                  .cart-header,
+                                  .car-data{
+                                    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+                                  }
+                                  .cart-header h4{
+                                    font-size: 14px;
+                                      color: var(--color-777777);
+                                  }
+                                  .cart-col-1 p{
+                                    font-size: 14px;
+                                      color: var(--color-777777);
+                                  }
+                                  .cart-col-1{
+                                    width:40%
+                                  }
+                                  .cart-col-2{
+                                    width:10%
+                                  }
+                                  .cart-col-3{
+                                    width:15%
+                                  }
+                                  .cart-col-4{
+                                    width:15%
+                                  }
+                                  .cart-data h5.price{
+                                    font-size: 14px;
+                                    columns:var(--color-lclclb);
+                                   
+                                  }
